second cut off date fixed

--- a/fronthack/src/sass/layout/_layout-how-to-apply.sass
+++ b/fronthack/src/sass/layout/_layout-how-to-apply.sass
@@ -61,11 +61,17 @@
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.05)
 
 .red-box
+  text-align: center
   background-color: $red-box
   padding: 5px 5px 7px 5px
   border-radius: 50px 50px 50px 50px
   -moz-border-radius: 50px 50px 50px 50px
   -webkit-border-radius: 50px 50px 50px 50px
+
+.red-box__second
+  margin-left: -15px
+  padding: 5px 15px 7px 15px
+
 
 .activity-icon__title
   display: inline-block
